<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/id_nombre1"
        android:textSize="30sp"/>
    <ImageView
        android:layout_width="100sp"
        android:layout_height="200sp"
        android:contentDescription="@string/app_name"
        android:id="@+id/id_img1"
        android:layout_gravity="center"
        android:src="@mipmap/usuario"/>

    <TextView
        android:id="@+id/tvMatricula1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_matricula"/>

    <TextView
        android:id="@+id/tvNacimiento1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ciudad_nacimiento" />

    <TextView
        android:id="@+id/tvExpresion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre"/>
    <Button
        android:id="@+id/atras_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atras"/>
</LinearLayout>